// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Picture renders correctly with preferThumbnails false 1`] = `
<div>
  <picture>
    <img
      alt="title"
      data-image-layout="FIXED"
      height="123"
      width="456"
    />
  </picture>
</div>
`;

exports[`Picture renders correctly with preferThumbnails false 2`] = `
<div>
  <picture>
    <img
      alt="title"
      data-image-layout="FIXED"
      height="123"
      width="456"
    />
  </picture>
</div>
`;

exports[`Picture renders correctly with preferThumbnails true 1`] = `
<div>
  <picture>
    <img
      alt="title"
      data-image-layout="FIXED"
      height="123"
      width="456"
    />
  </picture>
</div>
`;

exports[`Picture renders correctly with preferThumbnails true 2`] = `
<div>
  <picture>
    <img
      alt="title"
      data-image-layout="FIXED"
      height="123"
      width="456"
    />
  </picture>
</div>
`;

exports[`Picture renders correctly without extra props 1`] = `
<div>
  <picture>
    <img
      alt="title"
      data-image-layout="CONSTRAINED"
    />
  </picture>
</div>
`;
